增加mac配置文章，增加本地相片功能

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -637,5 +637,8 @@ css: css
 js: js
 images: images
 
+# 保存图片：https://github.com/CodeFalling/hexo-asset-image
+post_asset_folder: true
+
 # Theme version
 version: 5.1.2
