add image lazy load

--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,13 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 theme: next
 
+# Image Lazy Load 
+# https://www.npmjs.com/package/hexo-lazyload-image
+lazyload:
+  enable: true 
+  onlypost: false
+  loadingImg: 
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
