--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.4.2"
+    "version": "3.7.1"
   },
   "dependencies": {
     "hexo": "^3.4.2",
@@ -17,6 +17,7 @@
     "hexo-renderer-ejs": "0.3.1",
     "hexo-renderer-marked": "0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "postinstall-build": "^5.0.3"
   }
 }
